examples/invalid/program82.c
int main(void) {
    int *pointer;
    pointer = &pointer;
    return *pointer;
}


